custom-resources/Network-Policies/gitea-runner-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitea-runner-ingress
  namespace: gitea-runner
spec:
  endpointSelector: {}
  ingress:
    - {}
