custom-resources/Network-Policies/gitea-runner.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitea-runner-policy
  namespace: gitea-runner
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
    - toCIDRSet:
        - cidr: 192.168.178.43/32
      toPorts:
        - ports:
            - port: "6443"
