custom-resources/Network-Policies/workflow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: workflow-policy
  namespace: workflow
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress-nginx
      toPorts:
        - ports:
            - port: "8080"
  egress:
    - toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - world
